k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
  namespace: dev

spec:
  replicas: 3

  selector:
    matchLabels:
      app: calculator

  template:
    metadata:
      labels:
        app: calculator

    spec:
      containers:
        - name: calculator
          image: calculator-app:v1
          imagePullPolicy: Never

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
