k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: dev
spec:
  selector:
    app: calculator
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
